# zencontrol-cloud-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codeql.yml  commit-lint.yml  release.yml  test.yml
docs/: configuration.md  publishing-guide.md  release-checklist.md
src/zencontrol_cloud_mcp/: __init__.py  dev.py  server.py
src/zencontrol_cloud_mcp/api/: __init__.py  client.py  live.py  rest.py
src/zencontrol_cloud_mcp/auth/: __init__.py  proxy.py  token_store.py
src/zencontrol_cloud_mcp/models/: __init__.py  schemas.py
src/zencontrol_cloud_mcp/resources/: __init__.py  hierarchy.py
src/zencontrol_cloud_mcp/tools/: __init__.py  _helpers.py  control.py  devices.py  extended.py  live.py  scope.py  sites.py
src/zencontrol_mcp/: dev.py  scope.py  server.py
src/zencontrol_mcp/api/: __init__.py  client.py  live.py  rest.py
src/zencontrol_mcp/auth/: __init__.py  oauth.py  proxy.py  token_store.py
src/zencontrol_mcp/models/: __init__.py  schemas.py
src/zencontrol_mcp/resources/: hierarchy.py
src/zencontrol_mcp/tools/: __init__.py  _helpers.py  control.py  devices.py  extended.py  live.py  scope.py  sites.py
tests/: conftest.py  test_api.py  test_auth.py  test_client.py  test_dev.py  test_live.py  test_models.py  test_phase2.py  test_resources.py  test_scope.py  test_tools.py
