[project]
name = "zencontrol-mcp"
version = "0.1.0"
description = "MCP server for ZenControl DALI-2 lighting control via the ZenControl Cloud API"
readme = "README.md"
authors = [
    { name = "Jerome Brown", email = "Jerome@SoliDeoGloria.tech" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28",
    "websockets>=14.0",
    "pydantic>=2.0",
    "cryptography>=44.0",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
zencontrol-mcp = "zencontrol_mcp.server:main"
zencontrol-mcp-watch = "zencontrol_mcp.dev:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pydoc-markdown>=2.1.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.11",
]
