[project]
name = "zencontrol-cloud-mcp"
version = "1.0.0"
description = "MCP server for ZenControl DALI-2 lighting control via the ZenControl Cloud API"
readme = "README.md"
authors = [
    { name = "Jerome Brown", email = "Jerome@SoliDeoGloria.tech" }
]
license = { text = "Apache-2.0" }
keywords = ["mcp", "dali", "lighting", "zencontrol", "iot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28",
    "websockets>=14.0",
    "pydantic>=2.0",
    "cryptography>=44.0",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/oWretch/zencontrol-cloud-mcp"
Documentation = "https://github.com/oWretch/zencontrol-cloud-mcp#readme"
Repository = "https://github.com/oWretch/zencontrol-cloud-mcp.git"
"Bug Tracker" = "https://github.com/oWretch/zencontrol-cloud-mcp/issues"

[project.scripts]
zencontrol-cloud-mcp = "zencontrol_cloud_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "zencontrol_cloud_mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pydoc-markdown>=2.1.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.11",
    "python-semantic-release>=9.0",
    "commitizen>=3.0",
    "pre-commit>=3.0",
    "pyright>=1.1",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "pyproject.toml:tool.commitizen.version"
]
branch = "main"
upload_to_release = true
build_command = "uv run --with build python -m build"
commit_parser = "semantic_release.commit_parser.angular:AngularCommitParser"
# Angular parser is compatible with conventional commits
parser_angular_patch_types = ["fix", "perf"]
parser_angular_minor_types = ["feat"]
parser_angular_major_types = []

[tool.semantic_release.commit_parser_options]
# Break on these keywords to trigger major bumps
major_on_keyword = ["BREAKING CHANGE", "BREAKING"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["zencontrol_cloud_mcp"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "src/zencontrol_cloud_mcp/__init__.py:__version__",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
